# ADS

./: CMakeLists.txt
Lab1/: CMakeLists.txt  lab1.docx  main.cpp
Lab2/: CMakeLists.txt  HashTable.cpp  HashTable.h  lab2.docx  main.cpp
Lab3/: CMakeLists.txt  PriorityQueue.h  lab3.docx  main.cpp
Lab4/: CMakeLists.txt  binarySearchTree.h  main.cpp
